--- a/src/container/Team/Team.css
+++ b/src/container/Team/Team.css
@@ -3,8 +3,9 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    background: #161623;
+    background-image: conic-gradient(from -53.16deg at 50.03% 50%, #1F0047 -0.03deg, #0C1927 359.9deg, #1F0047 359.97deg, #0C1927 719.9deg);
     min-height: 100vh;
+    width: 100%;
 }
 section{
     position: relative;
@@ -42,7 +43,7 @@ section h1{
     position: relative;
     width: 300px;
     height: 400px;
-    background: rgba(255, 255, 255, 0.05);
+    background: #00263A;
     margin: 20px;
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
