Added About Us Page

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,13 +1,14 @@
 .app__navbar{
     width: 100%;
     display: flex;
+    position: relative;
     justify-content: space-between;
     align-items: center;
     background: var(--color-theme);
     color: white;
     padding: 0.5rem 2rem;
     border-bottom: 2px solid var(--color-orange);
-    box-shadow: 0 6px 6px -1px rgba(0,0,0,0.8);
+    box-shadow: 0 6px 6px 0px rgba(0, 0, 0, 0.8);
 } 
 .app__navbar-logo{
     display: flex;
@@ -71,7 +72,10 @@
     text-align: center;
     font-family: var(--font-base);
 }
-
+.app__navbar-smallscreen_links li a{
+    text-decoration: none;
+    color: #fff;
+}
 .app__navbar-smallscreen_links li:hover{
     color: var(--color-white);
 }
