--- a/src/container/Team/Team.css
+++ b/src/container/Team/Team.css
@@ -1,7 +1,6 @@
 .body{
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
     background-image: conic-gradient(from -53.16deg at 50.03% 50%, #1F0047 -0.03deg, #0C1927 359.9deg, #1F0047 359.97deg, #0C1927 719.9deg);
     min-height: 100vh;
@@ -18,6 +17,9 @@ section h1{
    font-weight: bolder;
    color: #fff;
    margin-top: 30px;
+}
+section h1 span{
+    color: #EC4D03;
 }
 .parent{
     display: block;
