Added Gallery Section

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -26,16 +26,27 @@
     list-style: none;
 }
 .app__navbar-links li{
-    margin: 0 2.5rem;
+    margin: 0 1rem;
     cursor: pointer;
+    padding: 10px 30px;
+    border: 0.2px solid transparent;
+    border-bottom: 2.5px solid transparent;
+    transition: 0.2s ease-in;
 }
 .app__navbar-links li:hover{
-    color: var(--color-grey);
+    background: radial-gradient(49.84% 89.81% at 49.84% 118.29%, rgba(255, 92, 0, 0.64) 0%, rgba(255, 107, 0, 0) 100%);
+    border: 0.2px solid var(--color-orange);
+    border-bottom: 2.5px solid var(--color-orange);
+    border-radius: 14px;
 }
 .app__navbar-links li a{
    text-decoration: none;
    color: #fff;
+   
 }
+.app__navbar-links li a:hover{
+   
+ }
 .app__navbar-smallscreen{
     display: none;
 }
